Restore accidentally deleted z-indexes (in other PR); fix ibexa-popup z-index

--- a/src/bundle/Resources/public/scss/_main-container.scss
+++ b/src/bundle/Resources/public/scss/_main-container.scss
@@ -27,7 +27,7 @@
             position: absolute;
             width: 100%;
             background-color: $ibexa-color-dark;
-            z-index: 2;
+            z-index: 1050;
         }
 
         &::before {
