--- a/src/bundle/Resources/public/scss/_popup-menu.scss
+++ b/src/bundle/Resources/public/scss/_popup-menu.scss
@@ -8,7 +8,7 @@
     border-radius: $ibexa-border-radius;
     box-shadow: calculateRem(4px) calculateRem(22px) calculateRem(67px) 0 rgba($ibexa-color-info, 0.2);
     position: absolute;
-    z-index: 1000;
+    z-index: 1060;
 
     &__items-list {
         padding-left: 0;
